--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API=https://api.openweathermap.org/data/2.5/weather?lat=33.312805&lon=44.361488&appid=fdfea805c327b7df7d8f8c3ac49bba07
+REACT_APP_API=`https://api.openweathermap.org/data/2.5/weather?lat=${}&lon=${} &appid=fdfea805c327b7df7d8f8c3ac49bba07`
